# pam-ttysshca

./: .gitignore  Cargo.toml  README.md  about.toml  cmd_line  codecov.yml  index-sort-f.html  index-sort-l.html  index.html
.github/: dependabot.yml
.github/workflows/: coverage.yaml  pamtest.yml  release.yaml
cli/: Cargo.toml  build.rs
cli/src/: index-sort-f.html  index-sort-l.html  index.html  main.rs  main.rs.func-c.html  main.rs.func.html  main.rs.gcov.html
gui/: Cargo.toml
gui/src/: index-sort-f.html  index-sort-l.html  index.html  main.rs  main.rs.func-c.html  main.rs.func.html  main.rs.gcov.html
lib/: Cargo.toml
lib/src/: index-sort-f.html  index-sort-l.html  index.html  lib.rs  lib.rs.func-c.html  lib.rs.func.html  lib.rs.gcov.html
pam/: Cargo.toml
pam/src/: index-sort-f.html  index-sort-l.html  index.html  lib.rs  lib.rs.func-c.html  lib.rs.func.html  lib.rs.gcov.html
pamtester/: Cargo.toml
pamtester/src/: index-sort-f.html  index-sort-l.html  index.html  main.rs  main.rs.func-c.html  main.rs.func.html  main.rs.gcov.html
py/: Cargo.toml  build.rs
py/src/: index-sort-f.html  index-sort-l.html  index.html  lib.rs  lib.rs.func-c.html  lib.rs.func.html  lib.rs.gcov.html
shared/: Cargo.toml
shared/src/: binary.rs  binary.rs.func-c.html  binary.rs.func.html  binary.rs.gcov.html  crypto.rs  crypto.rs.func-c.html  crypto.rs.func.html  crypto.rs.gcov.html  index-sort-f.html  index-sort-l.html  index.html  lib.rs  lib.rs.func-c.html  lib.rs.func.html  lib.rs.gcov.html  supportedalgorithm.rs  supportedalgorithm.rs.func-c.html  supportedalgorithm.rs.func.html  supportedalgorithm.rs.gcov.html
tests/: keygen.sh  signed  signed-cert.pub  signed.pub  signed_encrypted  signed_false  signed_false-cert.pub  signed_false.pub
tests/CAs/: ca1  ca1.pub  ca2  ca2.pub
tests/keys/: bash.sh  ecdsa_nistp256  ecdsa_nistp256-ecdsa_nistp384.cert  ecdsa_nistp256-ecdsa_nistp521.cert  ecdsa_nistp256-ed25519.cert  ecdsa_nistp256-rsa_sha256.cert  ecdsa_nistp256-rsa_sha512.cert  ecdsa_nistp256.pub  ecdsa_nistp384  ecdsa_nistp384-ecdsa_nistp256.cert  ecdsa_nistp384-ecdsa_nistp521.cert  ecdsa_nistp384-ed25519.cert  ecdsa_nistp384-rsa_sha256.cert  ecdsa_nistp384-rsa_sha512.cert  ecdsa_nistp384.pub  ecdsa_nistp521  ecdsa_nistp521-ecdsa_nistp256.cert  ecdsa_nistp521-ecdsa_nistp384.cert  ecdsa_nistp521-ed25519.cert  ecdsa_nistp521-rsa_sha256.cert  ecdsa_nistp521-rsa_sha512.cert  ecdsa_nistp521.pub  ed25519  ed25519-ecdsa_nistp256.cert  ed25519-ecdsa_nistp384.cert  ed25519-ecdsa_nistp521.cert  ed25519-rsa_sha256.cert  ed25519-rsa_sha512.cert  ed25519.pub  rsa_sha256  rsa_sha256-ecdsa_nistp256.cert  rsa_sha256-ecdsa_nistp384.cert  rsa_sha256-ecdsa_nistp521.cert  rsa_sha256-ed25519.cert  rsa_sha256-rsa_sha512.cert  rsa_sha256.pub  rsa_sha512  rsa_sha512-ecdsa_nistp256.cert  rsa_sha512-ecdsa_nistp384.cert  rsa_sha512-ecdsa_nistp521.cert  (+3 more)
tests/keys_limited/: ecdsa_nistp256  ecdsa_nistp256-ecdsa_nistp384.cert  ecdsa_nistp256-ecdsa_nistp521.cert  ecdsa_nistp256-ed25519.cert  ecdsa_nistp256-rsa_sha256.cert  ecdsa_nistp256-rsa_sha512.cert  ecdsa_nistp256.pub  ecdsa_nistp384  ecdsa_nistp384-ecdsa_nistp256.cert  ecdsa_nistp384-ecdsa_nistp521.cert  ecdsa_nistp384-ed25519.cert  ecdsa_nistp384-rsa_sha256.cert  ecdsa_nistp384-rsa_sha512.cert  ecdsa_nistp384.pub  ecdsa_nistp521  ecdsa_nistp521-ecdsa_nistp256.cert  ecdsa_nistp521-ecdsa_nistp384.cert  ecdsa_nistp521-ed25519.cert  ecdsa_nistp521-rsa_sha256.cert  ecdsa_nistp521-rsa_sha512.cert  ecdsa_nistp521.pub  ed25519  ed25519-ecdsa_nistp256.cert  ed25519-ecdsa_nistp384.cert  ed25519-ecdsa_nistp521.cert  ed25519-rsa_sha256.cert  ed25519-rsa_sha512.cert  ed25519.pub  rsa_sha256  rsa_sha256-ecdsa_nistp256.cert  rsa_sha256-ecdsa_nistp384.cert  rsa_sha256-ecdsa_nistp521.cert  rsa_sha256-ed25519.cert  rsa_sha256-rsa_sha512.cert  rsa_sha256.pub  rsa_sha512  rsa_sha512-ecdsa_nistp256.cert  rsa_sha512-ecdsa_nistp384.cert  rsa_sha512-ecdsa_nistp521.cert  rsa_sha512-ed25519.cert  (+2 more)
tests/keys_unlimited/: ecdsa_nistp256  ecdsa_nistp256-ecdsa_nistp384.cert  ecdsa_nistp256-ecdsa_nistp521.cert  ecdsa_nistp256-ed25519.cert  ecdsa_nistp256-rsa_sha256.cert  ecdsa_nistp256-rsa_sha512.cert  ecdsa_nistp256.pub  ecdsa_nistp384  ecdsa_nistp384-ecdsa_nistp256.cert  ecdsa_nistp384-ecdsa_nistp521.cert  ecdsa_nistp384-ed25519.cert  ecdsa_nistp384-rsa_sha256.cert  ecdsa_nistp384-rsa_sha512.cert  ecdsa_nistp384.pub  ecdsa_nistp521  ecdsa_nistp521-ecdsa_nistp256.cert  ecdsa_nistp521-ecdsa_nistp384.cert  ecdsa_nistp521-ed25519.cert  ecdsa_nistp521-rsa_sha256.cert  ecdsa_nistp521-rsa_sha512.cert  ecdsa_nistp521.pub  ed25519  ed25519-ecdsa_nistp256.cert  ed25519-ecdsa_nistp384.cert  ed25519-ecdsa_nistp521.cert  ed25519-rsa_sha256.cert  ed25519-rsa_sha512.cert  ed25519.pub  rsa_sha256  rsa_sha256-ecdsa_nistp256.cert  rsa_sha256-ecdsa_nistp384.cert  rsa_sha256-ecdsa_nistp521.cert  rsa_sha512  (+9 more)
