[package]
name = "Authenticator_cli"
version = "1.0.0"
edition = "2024"
authors = ["Dr. Frederik Lauber"]
keywords = ["pam", "linux", "authentication", "challenge-response", "tty"]
license = "GPL-3.0-or-later"

[dependencies]
shared = { path = "../shared" }
clap = { version = "4.5.57", features = ["derive"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.22"
