[package]
name = "Authenticator"
version = "1.0.0"
edition = "2024"
authors = ["Dr. Frederik Lauber"]
keywords = ["pam", "linux", "authentication", "challenge-response", "tty"]
license = "GPL-3.0-or-later"

[dependencies]
eframe = { version = "0.33.3", features = ["glow", "default_fonts"]}
egui = { version = "0.33.3"}
egui_kittest = {version = "0.33.3"}
rfd = { version = "0.17.2" }
directories = { version = "6.0.0" }
toml = { version = "1.0.1" , features = ["display", "serde", "parse"]}
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
image = { version = "0.25.9", features = ["ico"] }
shared = { path = "../shared" }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.22"


