[package]
name = "pam-ttysshca"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "pam_ttysshca"
crate-type = ["cdylib"]

[target.'cfg(unix)'.dependencies]
pam-bindings = "0.1.1"
shared = { path = "../shared" }
syslog = {version = "7.0.0"}

[target.'cfg(windows)'.dependencies]
