[package]
name = "pamtester"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "pamtester"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
shared = { path = "../shared" }

[target.'cfg(windows)'.dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"