[package]
name = "pypam_ttysshca"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "pypam_ttysshca"
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
pyo3 = { version = "0.28.0", features = ["extension-module", "abi3"] }

[dev-dependencies]
pyo3 = { version = "0.28.0", features = ["auto-initialize"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"